@@ -139,6 +139,8 @@ Release 0.9.0 - unreleased
 
   BUG FIXES
 
+    TAJO-1037: KillQuery hang in subquery init state. (jinho)
+
     TAJO-1024: RpcConnectionPool::getConnection can cause NPE at 
     initialization. (hyunsik)
 
